fix(migrations): add db_driver setting

--- a/auth/alembic.ini
+++ b/auth/alembic.ini
@@ -58,7 +58,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://%(POSTGRES_USER)s:%(POSTGRES_PASSWORD)s@%(POSTGRES_HOST)s/%(POSTGRES_DB)s
+sqlalchemy.url = %(DB_DRIVER)s://%(DB_USER)s:%(DB_PASSWORD)s@%(DB_HOST)s/%(DB_NAME)s
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
