fix: change letter case in .env to lower

--- a/auth/.env.example
+++ b/auth/.env.example
@@ -1,9 +1,9 @@
-PRODUCTION = False
+production = false
 
-RELATIONAL_DB = postgres
+relational_db = postgres
 
-POSTGRES_USER = postgres
-POSTGRES_PASSWORD = postgres
-POSTGRES_HOST = localhost
-POSTGRES_PORT = 5432
-POSTGRES_DB = develop
+postgres_user = postgres
+postgres_password = postgres
+postgres_host = localhost
+postgres_port = 5432
+postgres_db = develop
