--- a/auth/.env.prod.example
+++ b/auth/.env.prod.example
@@ -1,9 +1,8 @@
-PRODUCTION = False
+production = false
 
-RELATIONAL_DB = postgres
-
-POSTGRES_USER =
-POSTGRES_PASSWORD =
-POSTGRES_HOST =
-POSTGRES_PORT =
-POSTGRES_DB =
+relational_db = postgres
+postgres_user = postgres
+postgres_password = postgres
+postgres_host = localhost
+postgres_port = 5432
+postgres_db = develop
