smallfeat: add isort to pre-commit config

--- a/auth/.pre-commit-config.yaml
+++ b/auth/.pre-commit-config.yaml
@@ -1,5 +1,11 @@
 repos:
--   repo: local
+  - repo: https://github.com/pycqa/isort
+    rev: 5.13.2
+    hooks:
+      - id: isort
+        name: isort (python)
+
+  - repo: local
     hooks:
     -   id: flake8
         name: wemake-python-styleguide
