--- a/auth/.pre-commit-config.yaml
+++ b/auth/.pre-commit-config.yaml
@@ -7,6 +7,15 @@ repos:
 
   - repo: local
     hooks:
+      - id: mypy
+        name: mypy
+        entry: mypy
+        language: python
+        types: [python]
+        verbose: true
+
+  - repo: local
+    hooks:
     -   id: flake8
         name: wemake-python-styleguide
         description: Check code style with wemake-python-styleguide
