fix(cfg): fix mypy config and replace isort cfg to toml file

--- a/auth/.pre-commit-config.yaml
+++ b/auth/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
     hooks:
       - id: mypy
         name: mypy
-        entry: mypy
+        entry: mypy --package app --namespace-packages
         language: python
         types: [python]
         verbose: true
