--- a/auth/pyproject.toml
+++ b/auth/pyproject.toml
@@ -1,6 +1,8 @@
 [tool.mypy]
-mypy_path = './src:./tests'
+files = ["app/src", "app/tests"]
 ignore_missing_imports = true
+strict = true
+exclude = ["venv/"]
 
 [tool.isort]
 multi_line_output = 3
