--- a/auth/pyproject.toml
+++ b/auth/pyproject.toml
@@ -7,4 +7,5 @@ exclude = ["venv/"]
 [tool.isort]
 multi_line_output = 3
 include_trailing_comma = true
+use_parentheses = true
 skip_glob = "migrations/*"
