--- a/auth/docker-compose.yaml
+++ b/auth/docker-compose.yaml
@@ -18,6 +18,14 @@ services:
     ports:
       - 5432:5432
 
+  redis:
+    image: redis:latest
+    restart: always
+    ports:
+      - "6379:6379"
+    environment:
+      - REDIS_HOST=localhost
+      - REDIS_PORT=6379
 
 volumes:
   postgres_data:
