feat(containers): add containers for dependency injection and fix configs

--- a/auth/.env.example
+++ b/auth/.env.example
@@ -1,9 +1,27 @@
 production = false
 
-relational_db = postgres
+api_title = AuthAPI
+api_version = 0.0.1
+api_summary =
+api_description =
 
-postgres_user = postgres
-postgres_password = postgres
-postgres_host = localhost
-postgres_port = 5432
-postgres_db = develop
+db_driver =
+db_host =
+db_port =
+db_user =
+db_password =
+db_name =
+db_schema =
+
+redis_host =
+redis_port =
+redis_user =
+redis_password =
+max_connections =
+
+jwt_secret =
+encryption_algorithm =
+access_token_expiration =
+refresh_token_expiration =
+
+default_user_role = base
