--- a/auth/docker-compose.yaml
+++ b/auth/docker-compose.yaml
@@ -27,5 +27,16 @@ services:
       - REDIS_HOST=localhost
       - REDIS_PORT=6379
 
+  auth:
+    build: .
+    restart: always
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    depends_on:
+      - redis
+      - postgres
+
 volumes:
   postgres_data:
