--- a/auth/docker-compose.yaml
+++ b/auth/docker-compose.yaml
@@ -36,8 +36,6 @@ services:
   auth:
     build: .
     restart: always
-    ports:
-      - "8000:8000"
     env_file:
       - .env
     depends_on:
@@ -48,3 +46,8 @@ services:
 
 volumes:
   postgres_data:
+
+networks:
+  default:
+    name: $NETWORK_NAME
+    external: true
