--- a/auth/.env.example
+++ b/auth/.env.example
@@ -2,26 +2,24 @@ production = false
 
 api_title = AuthAPI
 api_version = 0.0.1
-api_summary =
-api_description =
 
-db_driver =
-db_host =
-db_port =
-db_user =
-db_password =
-db_name =
-db_schema =
+db_driver = postgresql+asyncpg
+db_host = postgres
+db_port = 5432
+db_user = postgres
+db_password = postgres
+db_name = develop
+db_schema = public
 
-redis_host =
-redis_port =
-redis_user =
-redis_password =
-max_connections =
+redis_host = redis
+redis_port = 6379
+redis_user = default
+redis_password = password
+max_connections = 1024
 
-jwt_secret =
-encryption_algorithm =
-access_token_expiration =
-refresh_token_expiration =
+jwt_secret = 'secret'
+encryption_algorithm = HS256
+access_token_expiration = 100
+refresh_token_expiration = 250
 
 default_user_role = base
