--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -21,4 +21,4 @@ COPY app/ app/
 EXPOSE 8000
 
 RUN chmod +x /opt/auth/run.sh
-ENTRYPOINT [ "/opt/auth/run.sh" ]
+ENTRYPOINT [ "bash", "/opt/auth/run.sh" ]
