feat(log): add sentry for project

--- a/auth/.env.example
+++ b/auth/.env.example
@@ -1,8 +1,13 @@
-production = false
+# Logging
+use_sentry = false
+sentry_dsn = set-your-dsn
 
+# API
+production = false
 api_title = AuthAPI
 api_version = 0.0.1
 
+# Main DB
 db_driver = postgresql+asyncpg
 db_host = postgres
 db_port = 5432
@@ -11,15 +16,18 @@ db_password = postgres
 db_name = develop
 db_schema = public
 
+# Cache DB
 redis_host = redis
 redis_port = 6379
 redis_user = default
 redis_password = password
 max_connections = 1024
 
+# JWT
 jwt_secret = 'secret'
 encryption_algorithm = HS256
 access_token_expiration = 100
 refresh_token_expiration = 250
 
+# User
 default_user_role = base
