--- a/auth/.env.prod.example
+++ b/auth/.env.prod.example
@@ -1,8 +1,13 @@
-production = true
+# Logging
+use_sentry = false
+sentry_dsn = set-your-dsn
 
+# API
+production = true
 api_title = AuthAPI
 api_version = 0.0.1
 
+# Main DB
 db_driver = postgresql+asyncpg
 db_host =
 db_port =
@@ -11,15 +16,18 @@ db_password =
 db_name =
 db_schema =
 
+# Redis
 redis_host =
 redis_port =
 redis_user =
 redis_password =
 max_connections =
 
+# JWT
 jwt_secret =
 encryption_algorithm = HS256
 access_token_expiration =
 refresh_token_expiration =
 
+# User
 default_user_role = base
