--- a/auth/requirements.txt
+++ b/auth/requirements.txt
@@ -11,6 +11,7 @@ pydantic[email]==2.6.0
 pydantic-settings==2.2.1
 
 fastapi==0.109.0
+sentry-sdk[fastapi]==1.45.0
 orjson==3.10.0
 
 python-jose==3.3.0
