--- a/auth/requirements.txt
+++ b/auth/requirements.txt
@@ -17,6 +17,7 @@ orjson==3.10.0
 python-jose==3.3.0
 passlib[bcrypt]==1.7.4
 bcrypt==4.0.1
+types-passlib==1.7.7.20240327
 
 gunicorn==22.0.0
 uvicorn==0.29.0
