init(logging): add logging configuration for project and move root files to src dir

--- a/auth/.env.example
+++ b/auth/.env.example
@@ -1,6 +1,7 @@
 # Logging
 use_sentry = false
 sentry_dsn = set-your-dsn
+logging_level = info  # types: (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 
 # API
 production = false
